--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,6 @@
   list-style: none;
   text-decoration: none;
   color: #ecf0f1;
-  /* background-image: linear-gradient(218deg, #000, #67817e); */
 }
 
 body{background-color: #24252A;}
@@ -18,7 +17,7 @@ li, a, button{
   font-size: 16px;
 }
 
-/* HEADER */
+/*----- HEADER ------*/
 
 header{
   margin: 0;
@@ -27,14 +26,12 @@ header{
   position: fixed;
   z-index: 100;
   width: 100%;
+  text-transform: uppercase;
 }
 
-h2{
-  text-transform: uppercase;
-  cursor: pointer;
-  margin-left: auto;
-  margin: 0;
+h2 a{
   font-size: 30px;
+  margin: 0 1rem;
 }
 
 h2 img{
@@ -42,7 +39,15 @@ h2 img{
   width: 30px;
 }
 
-/* NAVBAR */
+/*---- HEADER BACKGROUND PIC-----*/
+
+figure img{
+  max-height: 70vh;
+  object-fit: cover;
+  margin-bottom: 2rem;
+}
+
+/*------ NAVBAR ------*/
 
 span{
   cursor: pointer;
@@ -109,8 +114,6 @@ nav ul{
 nav li{
   margin-left: 1em;
   margin-bottom: 1em;
-  /* display: inline-block; from yt*/
-  /* padding: 0 20px; from yt*/
 }
 
 nav li a{
@@ -131,25 +134,17 @@ nav li a:hover{color: rgba(0, 136, 169, 1);}
   transition: opacity 250ms ease-in-out 250ms;
 }
 
-/* BACKGROUND PIC*/
-
-figure img{
-  max-height: 70vh;
-  object-fit: cover;
-  margin-bottom: 2rem;
-}
-
-
-/* BIG NEWS */
+/*----- BIG NEWS -----*/
  article {
 	 margin: auto;
 	 display: flex;
 	 justify-content: center;
 	 max-width: 1000px;
-	 max-height: 500px;
+   max-height: 500px;
+   margin-bottom: 2rem;
 }
  article img {
-	 object-fit: cover;
+   object-fit: cover;
 }
  .tiles .tile {
 	 display: inline-block;
@@ -222,21 +217,19 @@ figure img{
 }
  
 
-/* MAIN CONTENT */
+/* ----- MAIN CONTENT ------ */
 main{
-  margin: auto;
+  margin: 0 1rem;
   display: flex;
   justify-content: center;
 }
 
-
-/* NEWS */
 main section{
   max-width: 1000px;
 }
 
 
-/* GRID-COLUMNS */
+/* ----- SMALL-NEWS-GRIDS ----- */
 img{
   width: 100%;
   /* display: block; */
@@ -264,12 +257,15 @@ footer{
 
 footer p, a, label{
   font-size: 13px;
+  text-align: center;
+  text-align: unset;
 }
 
 .footer{
   max-width: 1000px;
-  display: flex;
-  justify-content: space-between;
+  text-align: center;
+  /* display: flex;
+  justify-content: space-between; */
   width: 100%;
 }
 
@@ -295,6 +291,19 @@ footer p, a, label{
 /* MEDIA QUIERES */
 
 @media (min-width: 500px){
+  footer p, a, label{
+    text-align: initial;
+  }
+  
+  .footer{
+    text-align: initial;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  h2 a{
+    margin-left: 0;
+  }
   .grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
