--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,136 @@ html {
   background: #0025ff;
   color: #fff;
 }
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: black;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+
+/* HEADER */
+header {
+  margin: 0 auto;
+  width: 90%;
+  background-color: black;
+}
+
+header ul {
+  display: flex;
+  list-style: none;
+  padding: 0; /* Removes padding left */
+  margin: 0; /* Removes margin top bottom */
+}
+
+header li {
+  margin: 20px;
+  display: none;
+}
+
+.logo {
+  display: block;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+/* BIG NEWS */
+
+
+.big-news {
+  background-color: darkgoldenrod;
+}
+
+.big-news article {
+  background-color:firebrick;
+  width: 100%;
+  height: 300px;
+  margin: 0;
+}
+
+.big-news figure {
+  margin: 0;
+  background-color: brown;
+  width: 100%;
+  height: 300px;
+}
+
+
+/* NEWS CARDS */
+
+
+.news-card {
+  background-color: rebeccapurple;
+}
+
+.news-card article {
+  background-color: aquamarine;
+  height: 200px;
+  width: 100%;
+  margin: 0;
+}
+
+/* TABLET */
+
+
+@media (min-width: 600px) {
+  header ul {
+    justify-content: center;
+  }
+
+  header li {
+    display: block;
+  }
+  
+  .big-news, .news-card {
+    flex-direction: row;
+  }
+  
+  .big-news figure {
+    width: 40%;
+  }
+
+  .big-news article {
+    width: 60%;
+  }
+
+  .news-card article {
+    width: 50%;
+  }
+
+}
+
+
+/* DESKTOP */
+
+
+@media (min-width: 900px) {
+
+  .logo {
+    margin-right: auto;
+    order: -1;
+  }
+
+  .news-card article {
+    width: 25%;
+  }
+
+
+}
+
