--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,290 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: white;
+  color: #555555;
+  margin: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+a:visited {
+  color: inherit;
+}
+
+
+/* HEADER */
+
+header {
+  background:white;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  color: #FFAEC1;
+  border-bottom: #FFAEC1 2px solid;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background:#FFAEC1;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.logo {
+  width: 80px;
+  }
+
+nav {
+display: none;
+}
+
+nav a {
+  color: #FFAEC1;
+  text-decoration: none;
+  margin-left: 16px;
+}
+
+.header button {
+  margin-left: 20px;
+  background: white;
+  border: #FFAEC1 solid 2px;
+  color: #FFAEC1;
+  border-radius: 10%;
+  padding: 5px;
+}
+
+.header button:hover {
+  background: #FFAEC1;
+  color: white;
+}
+
+.header a:hover {
+color: #F7941F;
+}
+
+
+/* BIG NEWS */
+.big-news {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 50px 10px;
+}
+
+.big-news img {
+  width: 100%;
+}
+
+.big-news a:hover {
+color: #FFAEC1;
+}
+
+/* OTHER NEWS */
+.other-news {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+}
+
+.other-news img {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+}
+
+.other-news a {
+  color #555555;
+}
+
+.other-news a:hover {
+  color: #FFAEC1;
+}
+
+/* FOOTER */
+.footer {
+  border-top: #FFAEC1 2px solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10px;
+}
+
+
+.footer-text-desktop{
+  display: none;
+}
+
+.footer-text-tablet {
+  display: none;
+}
+
+.footer-middle {
+  color: #FFAEC1;
+}
+
+.footer-middle a:hover {
+  color: #F7941F;
+}
+
+.footer-right {
+  color: white;
+  font-size: 20px;
+}
+
+.fa {
+    padding: 20px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    background: #FFAEC1;
+    color: white;
+    border-radius: 20%;
+  }
+
+  .fa:hover {
+  opacity: 0.5;
+  }
+
+/* MEDIA QUERIES TABLET */
+
+@media (min-width: 667px) {
+  header {
+    justify-content: space-between;
+  }
+
+  .logo {
+    margin-left: 10px;
+  }
+
+  .hamburger {
+    display: none;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+    margin-right: 10px;
+    font-size: 20px;
+  }
+
+  .header button {
+    font-size: 20px;
+  }
+
+  .big-news p {
+    font-size: larger;
+  }
+
+  .other-news {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+
+  .other-news-child {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    max-width: 49%;
+  }
+
+  .other-news-child img {
+    object-fit: cover;
+    height: 200px;
+  }
+
+  .footer-text-tablet {
+    display: inline-block;
+    font-size: x-large;
+  }
+
+}
+
+/* MEDIA QUERIES DESKTOP */
+
+@media (min-width: 1024px) {
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 10px;
+    font-size: 15px;
+    letter-spacing: 3px;
+  }
+
+  .header button {
+    font-size: 15px;
+    letter-spacing: 3px;
+  }
+  
+  .big-news {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   margin: 0 10%;
+  }
+
+  .big-news img {
+    width: 50%;
+    margin-right: 20px;
+  }
+
+  .big-news p {
+    font-size: larger;
+  }
+  
+  .other-news {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin: 0 10%;
+  }
+
+  .other-news-child {
+    display: flex;
+    flex-direction: column;
+    max-width: 23%;
+    margin-right: 2%;
+  }
+
+  .other-news-child img {
+    object-fit: cover;
+    height: 200px;
+  }
+  
+  .footer-text-tablet {
+    display: none;
+  }
+
+  .footer-text-desktop {
+    display: inline-block;
+  }
+
+  .footer-right {
+    color: white;
+    font-size: 15px;
+  }
+  
+  .fa {
+      padding: 15px;
+      width: 15px;
+      text-align: center;
+      text-decoration: none;
+      background: #FFAEC1;
+      color: white;
+      border-radius: 20%;
+    }
+  
 }
