--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,260 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  box-sizing: border-box;
+}
+
+body { 
+  background: rgb(42,44,49);
+  background: linear-gradient(90deg, rgba(42,44,49,1) 0%, rgba(35,40,54,1) 34%, rgba(52,63,94,1) 100%);
+  color: whitesmoke;
+  font-family: Open Sans;
+  margin: 0 auto;
+}
+
+h1 {
+  font-family: Lato, serif;
+  font-weight:100;
+  font-size: 58px;
+  letter-spacing: 0.05em;
+  margin: 0;
+  display:inline;
+}
+
+h2{
+  font-family: Lato, sans-serif;
+  font-size: 30px; 
+  margin:20px, 20px;
+}
+
+h3 {
+  font-family: Lato, sans-serif;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+h4 {
+  font-family: Lato, sans-serif;
+  margin: 0 auto;
+}
+
+img {
+  border-radius: 8px;
+}
+
+/* HEADER STYLING */
+
+header{
+  height: 170px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-transform: uppercase;
+  background-color:whitesmoke;
+  color: rgb(42, 44, 49);
+  margin: 0 auto;
+}
+
+.logo{
+  width: 100px;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background-color: rgb(42, 44, 49);
+  border-radius: 5px;
+}
+
+nav {
+  display: none;
+  font-size: 36px;
+}
+
+nav a {
+  color: rgb(42, 44, 49);
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* BIG NEWS STYLING */
+
+.big-news {
+ padding: 40px 20px;
+ display: flex;
+ flex-direction: column;
+ text-align: center; 
+}
+
+.big-news img {
+  width: 100%;
+}
+
+.big-news p {
+  margin-top: -16px;
+}
+
+/* SMALL NEWS STYLING */
+
+.small-news {
+  text-align: center;
+  margin: 5%;
+  max-width: 1100px;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+}
+
+.news-card {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 20px;
+  border: whitesmoke 2px solid;
+  border-radius: 12px;
+}
+
+.news-card a{
+  background: whitesmoke; 
+  text-decoration: none;
+  color: #000;
+  padding: 25px;
+  border: rgb(42, 44, 49) 2px solid;
+  border-radius: 8px;
+  width: 100%;
+}
+
+.news-card a:hover{
+  opacity: 0.4;
+}
+
+.small-news img{
+  width: 80%;
+}
+
+/* FOOTER STYLING */
+
+footer {
+  height: 50px;
+  font-size: 10px;
+  text-align: end;
+  padding-right: 20px;
+}
+
+footer a{
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+/* ********************MEDIA QUERIES*******************  */
+
+/* TABLET MEDIA QUERY */
+
+@media (min-width: 650px){
+
+  h1 {
+    display: none;
+  }
+  
+/* NAV TABLET*/
+
+nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+ .left-logo {
+   display: none;
+ }
+
+.hamburger {
+  display: none;
+}
+
+/* BIG NEWS TABLET */
+
+.big-news{
+  text-align: left;
+}
+
+.small-news {
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 auto;
+}
+
+.news-card {
+  width: 40%;
+  flex-grow: 1;
+  margin: 12px;
+}
+}
+
+/* MEDIA QUERY DESKTOP */
+
+@media (min-width: 900px){
+/*NAV DESKTOP */
+h1 {
+  display:inline;
+}
+
+nav {
+  width:50%;
+
+}
+
+nav img {
+  display: none;
+}
+
+header {
+  padding:10px;
+  width:100%;
+  display:flex;
+  justify-content:space-around;
+  align-items:center;
+
+}
+
+.left-logo {
+  display: inline-block;
+}
+
+/* BIG NEWS DESKTOP */
+
+.big-news {
+  flex-direction: row;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.big-news img {
+  width: 50%;
+}
+
+.big-news div {
+  text-align:center;
+  padding-left:30px;
+  width:50%;
+}
+
+.news-card {
+  width:18%;
+  flex-grow: 1;
+  margin:12px;
+}
 }
