--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,228 @@
-html {
-  background: #0025ff;
+body {
+  background:#000;
   color: #fff;
+  margin: 000;
 }
+
+h1{
+  font-family: 'Playfair Display', sans-serif;
+  color: #fff;
+  font-weight: 100;
+  font-size: 50px;
+  margin-top: -12px;
+  margin-bottom: 14px;
+  text-align: center;
+}
+
+h2 {
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: 100;
+  font-size: 25px;
+}
+
+h3 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: #000;
+}
+
+h4 {
+  font-family: 'Oxygen', sans-serif;
+  text-decoration: none;
+  font-size: 9px;
+  color: rgb(18, 146, 6);
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+h5 {
+  font-family: 'Oxygen', sans-serif;
+  text-decoration: none;
+  font-size: 9px;
+  color: rgb(18, 146, 6);
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+p {
+  font-family: 'Oxygen', sans-serif;
+  color: #fff;
+  font-size: 10px;
+  line-height: 15px;
+  text-align: center;
+}
+
+/**** HEADER ****/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #000;
+}
+
+.logo-name {
+display: flex;
+flex-direction: row;
+}
+
+.logo-name img {
+  width: 10%;
+  margin-left: 10px;
+  margin-right: 20px;
+  min-width: 30px;
+}
+
+nav {
+  display: none;
+}
+
+nav a {
+  font-family: 'Oxygen', sans-serif;
+  text-decoration: none;
+  font-size: 10px;
+  color: rgb(18, 146, 6);
+  margin-left: 6px;
+  margin-right: 10px;
+}
+
+/**** BIG NEWS ****/
+
+.big-news-container{
+  text-decoration: none;
+}
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+}
+
+.big-news img {
+  width: 100%;
+
+}
+
+.big-news div{
+  margin: 0 15px;
+}
+
+.big-news hr {
+  border-top: 2px solid rgb(18, 146, 6);
+  width: 60%; 
+}
+
+/**** OTHER NEWS ****/
+
+.other-news {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.other-news a {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 16px;
+  width: 85%;
+  min-height: 300px;
+  max-height: 400px;
+  margin: 10px;
+  text-decoration: none;
+}
+
+.other-news img {
+  width: 90%;
+  margin: 10%;
+  border-radius: 16px;
+  margin-top: 13px;
+  margin-bottom: 0px; 
+}
+
+.other-news div{
+  max-width: 90%;
+}
+
+
+.other-news h3 {
+margin-bottom: 5px;
+}
+
+.other-news p {
+  margin-top: 0px;
+  color: #000
+  }
+
+@media (min-width: 650px) {
+  
+  .big-news hr {
+    display: none;
+  }
+
+  h1{
+    font-size: 55px;
+  }
+
+  h4 {
+  text-align: left;
+  margin-top: 50px;
+  }
+  
+  h5 {
+    text-align: left;
+    margin-left: 25px;
+    margin-top: 35px;
+  }
+
+  nav {
+    display: inline-block;
+  }
+    .big-news {
+    flex-direction: row;
+  }
+  .big-news img {
+    width: 40%;
+    margin-left: 10px;
+  }
+
+  .big-news h4 {
+    text-align: left; 
+}
+
+.big-news h1 {
+  text-align: left; 
+}
+
+.big-news p {
+  text-align: left; 
+  max-width: 90%;
+}
+
+.big-news div {
+  margin-left: 10px;
+}
+
+.other-news a{
+  width: 45%;
+}
+
+
+}
+
+@media (min-width: 900px) {
+
+h1{
+    font-size: 70px;
+  }
+
+  .other-news a{
+    width: 22%;
+    flex-grow: 1;
+  }
+  }
+  
