--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,460 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  box-sizing: inherit; 
+}
+
+
+body {
+  margin: 0;
+}
+
+
+
+
+
+
+/*** HEADER ***/
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.main-header-container {
+  background: #2d2d2d;
+  height: 108px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black; 
+  padding: 0 16px;
+  width: 100%;
+  
+}
+.logo {
+  width: 70px;
+  height: 70px;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-name: logo-animation;
+}
+.logo:hover {
+  animation: none;
+}
+
+@keyframes logo-animation {
+  0% {width: 70px;}
+  10% {width: 65px;}
+  20% {width: 60px;}
+  30% {width: 55px;}
+  40% {width: 50px;}
+  50% {width: 45px}
+  60% {width:40px;}
+  70% {width: 35px;}
+  80% {width: 30px;}
+  90% {width: 25px;}
+  100% {width: 20px;}
+}
+
+.mobile-header-right {
+  display: flex;
+  justify-content: space-around; 
+  
+  align-items: center;
+  width: 100px;
+}
+
+.fa {
+  padding: 5px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+ 
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.hamburger {
+  display: flex;
+  flex-direction: column; 
+  width: 30px;
+  height: 30px; 
+  justify-content: space-between;
+
+}
+
+.hamburger:hover {
+  opacity: 0.7;
+}
+.hamburger div {
+  background: #fff;
+  width: 30px;
+  height: 6px; 
+  border-radius: 5px;
+  
+  
+}
+
+input {
+  border-radius: 5px;
+  }
+
+/*** NAV BAR ***/
+
+.desktop-nav-bar {
+  width: 100%;
+  
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+}
+
+header a {
+  text-decoration: none;
+  color: black;
+  transition: .2s ease-in-out;
+  font-family: arial;
+  padding-left: 8px;
+  border-left: 1px solid black;
+  
+}
+
+.li.politics a:hover {
+  
+  cursor: pointer;
+  border-top: 4px solid red;
+}
+.li.gaul a:hover {
+  
+  cursor: pointer;
+  border-top: 4px solid blue;
+}
+.li.byzantium a:hover {
+  
+  cursor: pointer;
+  border-top: 4px solid purple;
+}
+.li.egypt a:hover {
+  
+  cursor: pointer;
+  border-top: 4px solid green;
+}
+.li.germanica a:hover {
+  
+  cursor: pointer;
+  border-top: 4px solid yellow;
+}
+
+
+/*** HEADLINE ***/
+
+.big-headline {
+  
+  width: 100%;
+  padding: 0 16px;
+  
+}
+.big-headline h1 {
+  font-family: 'Merriweather', serif;
+  font-weight: lighter;
+}
+
+.big-headline h3 {
+  color: red;
+  font-weight: bolder;
+}
+
+.journalist {
+  display: flex;
+  justify-content: space-between;
+  background: #eaeaea;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.journalist-left {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande';
+
+}
+.journalist-left p {
+  margin: 5px;
+}
+time {
+  color: #767676;
+  font-size: .75em;
+  text-decoration: underline;
+}
+
+.journalist .fa {
+  color: black;
+}
+/**** BIG NEWS ***/
+.big-news {
+  width: 100%;
+  padding:  16px;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  
+  
+}
+
+.big-image {
+  width: 100%;
+  
+}
+figure {
+  
+  padding: 8px 8px 0 8px;
+  box-shadow: 4px 8px 8px 8px grey;
+  max-width: 700px;
+  
+}
+
+figcaption {
+ font-size: 20px;
+ font-family: 'Permanent Marker';  
+}
+
+.big-text {
+  width: 85%;
+  line-height: 1.5em;
+  max-width: 700px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.grid-news-header {
+  background-image: repeating-linear-gradient(black, black 0.0625rem, transparent 0.0625rem, transparent 0.25rem);
+  background-size: 0.0625rem 0.8125rem;
+  background-repeat: repeat-x;
+  width: 90%;
+  margin: 16px 16px;
+  display: flex;
+  background-color: #eaeaea;
+  font-family: 'Merriweather', serif; 
+  font-weight: lighter;
+}
+
+.grid-news-header h1 {
+  padding: 0 8px;
+}
+
+
+/**** NEWS GRID ***/
+
+.grid-news-container {
+  padding: 30px 16px 0 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.grid-image {
+  width:100%;
+}
+
+
+
+.effect-container{
+  position:relative;
+  padding:0;
+  width:100%;
+  display:block;
+  cursor:pointer;
+  overflow:hidden;
+  margin: 10px;
+  }
+  .content {
+  opacity:0;
+  font-size: 40px;
+  position:absolute;
+  top:0;
+  left:0;
+  color: maroon;
+  background-color:rgba(200,200,200,0.5);
+  width:100%;
+  height: 100%;
+  transition: all 400ms ease-out;
+  text-align:center;
+  }
+  .effect-container .content:hover { opacity:1; }      
+  .effect-container .content .text {
+  height:0;
+  opacity:1;
+  transition-delay: 0s;
+  transition-duration: 0.4s;
+  }
+  .effect-container .content:hover .text {
+  opacity:1;
+  transform: translateY(240px);
+  }
+
+ /*** FOOTER ***/
+ 
+ footer {
+   width: 100%;
+   height: 100px;
+   background: #2d2d2d;
+   display: flex;
+   justify-content: space-between;
+   padding: 5px 16px 0 16px;
+   margin-top: 15px;
+ }
+
+ .footer-logo {
+   width: 80px;
+   height:80px;
+ }
+
+ .footer-right {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+ }
+
+ .footer-statement {
+   color: white;
+   font-size: .75em;
+   font-family: Georgia, 'Times New Roman', Times, serif;
+ }
+
+ .back-to-top-mobile {
+   color: white;
+   text-decoration: none;
+   font-family: Arial, Helvetica, sans-serif;
+ }
+ .back-to-top-mobile:hover {
+   color: yellow;
+ }
+ .back-to-top-desktop {
+  color: white;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  
+}
+.back-to-top-desktop:hover {
+  color: yellow;
+}
+
+/*** RESPONSIVITY ***/
+
+
+@media (max-width:668px) {
+  main {
+    padding-top: 120px;
+  }
+  header {position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 999;
+    }
+  .header-form {
+    display: none;
+  }
+  .desktop-nav-bar {
+    display: none;
+  }
+  .desktop-header-right {
+    display: none;
+  }
+
+  .footer-logo {
+    display: none;
+  }
+  .back-to-top-desktop {
+    display: none;
+  }
+
+  
+}
+
+@media (min-width: 669px) {
+
+  header {
+    border-bottom: 1px solid black;
+  }
+
+  .mobile-header-right {
+    display: none;
+  }
+
+  .logo {
+    position: relative;
+    right: 1.75cm;
+  }
+
+
+  
+
+  
+  .grid-news-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .footer-form {
+    display: none;
+  }
+  .back-to-top-mobile {
+    display: none;
+  }
+  
+}
+
+@media (min-width: 669px) and (max-width: 1024px) {
+  .effect-container {
+    width: 45%;
+    max-width: 400px;
+  }
+
+  .content {
+    font-size: 30px;
+  }
+  .effect-container .content:hover .text {
+    transform: translateY(140px);
+    }
+
+}
+
+@media (min-width: 1025px) {
+  .big-news {
+    flex-direction:row;
+    align-items: flex-start;
+    
+  }
+  .effect-container {
+    width: 22%;
+  }
+  .content {
+    font-size: 25px;
+  }
+  .effect-container .content:hover .text {
+    transform: translateY(100px);
+    }
 }
