--- a/code/style.css
+++ b/code/style.css
@@ -9,7 +9,12 @@ a.top {
   font-size: smaller;
   float: right;
   opacity: 0.5;
-  margin: 5px;
+  margin: 15px;
+  text-decoration: underline;
+}
+
+a.top:hover {
+  font-style: italic;
 }
 
 a.active {
@@ -42,11 +47,24 @@ margin: 0;
   opacity: 0.5;
 }
 
+.sidebar img {
+  width: 30px;
+  float: right;
+  margin: 0;
+  padding: 10px;
+}
+
 img {
   width: 50%;
-  border-radius: 20px;
-  margin: 10px;
-  align-self: flex-end;
+  border-radius: 30px;
+  margin: 5px;
+  padding: 15px 5px;
+  /* justify-content: center; */
+  /* align-self: flex-end; */
+}
+
+img:hover {
+  opacity: 0.7;
 }
 
 img.headline {
@@ -70,6 +88,7 @@ h1 {
   font-family: 'Alata', sans-serif;
   text-align: center;
   font-size: 60px;
+  margin: 20px 30px 70px 30px;
 }
 
 h1:hover {
@@ -78,9 +97,15 @@ h1:hover {
 
 h2 {
 font-family: 'Alata', sans-serif;
+color: white;
 font-size: 40px;
 align-self: flex-start;
 padding: 10px 15px;
+text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 h2:hover {
@@ -91,7 +116,7 @@ h2:hover {
 .big-news {
   border: 20px solid rgb(61, 156, 168);
   border-radius: 35px;
-  padding: 10px;
+  padding: 30px 10px;
   margin: 5px;
   display: flex;
 }
@@ -106,21 +131,86 @@ h2:hover {
 .flex-parent {
   border: 8px solid rgb(61, 156, 168);
   border-radius: 35px;
-  padding: 10px;
+  width: auto;
+  padding: 10px 0px 10px 50px;
+  /* Can't get this to center = ugly solution?? */
   margin: 15px;
   display: flex;
-  justify-content: space-evenly;
-  align-items: baseline;
   flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .flex-parent p {
-  width: 60%;
+  width: 70%;
+  float: center;
+}
+
+.cutest {
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 40%;
+  /* padding: 10px; */
+}
+
+.cutest img {
+  width: 80%;
+  justify-content: center;
+}
+
+.puppies {
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  width: 40%;
+  /* padding: 10px; */
+}
+
+.puppies img {
+  width: 80%;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.doing {
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 40%;
+  /* padding: 10px; */
+}
+
+.doing img {
+  width: 80%;
+  justify-content: center;
+}
+
+.snow {
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 40%;
+  /* padding: 10px; */
+}
+
+.snow img {
+  width: 80%;
+  justify-content: center;
 }
 
 h3 {
 font-family: 'Alata', sans-serif;
  font-size: 20px; 
+ color: white;
 }
 
 h3:hover {
@@ -136,11 +226,29 @@ label {
 input {
   width: 200px;
   margin: 5px;
+  height: 20px;
+  border-radius: 8px;
+}
+
+input:hover {
+  box-shadow: 10px 10px 10px grey;
 }
 
 button {
   width: 60px;
-  opacity: 0.9;
+  opacity: 0.7;
+  font-family: 'Alata', sans-serif;
+  height: 30px;
+  border-radius: 10px;
+}
+
+button:hover {
+  box-shadow: 8px 8px 10px grey;
+}
+
+::placeholder {
+  font-family: 'Alata', sans-serif;
+  opacity: 0.6;
 }
 
 .form {
@@ -168,14 +276,27 @@ footer {
     float: left;
   }
 
+  .sidebar img {
+    float: left;
+  }
+
   img {
-    width: 50%;
-    height: 50%;
-    align-self: center;
+    display: flex;
+    align-items: flex-end;
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    font-size: 35px;
   }
 
   .big-news {
     align-items: flex-start;
+    border: 12px solid rgb(61, 156, 168);
+    border-radius: 35px;
   }
 
   img.headline {
@@ -186,11 +307,18 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 10px 2px 10px 30px;
+    width: auto;
+    border: 4px solid rgb(61, 156, 168);
+    border-radius: 35px;
   }
 
   .flex-parent p {
     width: 60%;
+    display: flex;
+    justify-content: center;
   }
+
 
   .cutest {
     width: 50%;
@@ -215,11 +343,26 @@ footer {
     background-color: white;
   }
 
+  .sidebar {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+  }
+
   .sidebar a {
     display: block;
     text-align: center;
     float: none;
     color: grey;
+    font-size: 14px;
+  }
+
+  .sidebar a:hover {
+    font-size: 14px;
+  }
+
+  .sidebar img {
+    width: 20px;
   }
 
   p {
@@ -229,17 +372,20 @@ footer {
 
   h1 {
     color: hsl(327, 28%, 74%);
-    font-size: 50px;
+    font-size: 35px;
   }
 
   h2 {
     color: hsl(327, 28%, 74%);
-    font-size: 40px;
+    font-size: 35px;
+    margin: 10px;
   }
 
   h3 {
     color: hsl(327, 28%, 74%);
-    font-size: 30px;
+    font-size: 25px;
+    width: 100%;
+    margin: 10px;
   }
 
   img.headline {
@@ -251,6 +397,7 @@ footer {
   img {
     width: 80%;
     align-items: center;
+    margin: 20px 10px;
   }
 
   .big-news {
@@ -261,12 +408,15 @@ footer {
 
   .flex-parent {
     flex-direction: column;
-    width: 90%;
     border: 2px solid hsl(327, 28%, 74%);
     border-radius: 0%;
+    padding: 30px 10px;
     justify-content: center;
     align-items: center;
   }
+ .flex-parent p {
+   width: 80%;
+ }
 
   .cutest {
     width: 80%;
