--- a/code/style.css
+++ b/code/style.css
@@ -30,13 +30,13 @@ header{
 }
 
 h2 a{
-  font-size: 30px;
+  font-size: 25px;
   margin: 0 1rem;
 }
 
 h2 img{
-  height: 30px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
   margin: 0;
 }
 
@@ -291,6 +291,15 @@ footer p, a, label{
 /* MEDIA QUIERES */
 
 @media (min-width: 500px){
+  h2 a{
+    font-size: 30px;
+  }
+  
+  h2 img{
+    height: 30px;
+    width: 30px;
+  }
+
   footer p, a, label{
     text-align: initial;
   }
