--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,49 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  margin: 0;
+  padding: 0;
+  background:white;
+}
+
+
+nav {
+    width: 100%;
+    background: white;
+    overflow: auto;
+    margin-top: 0px;
+    border-bottom: 3px solid rgb(131, 185, 230);
+}
+
+ul {
+    padding: 0;
+    margin: 0 0 0 150px;
+    list-style: none;
+}
+
+li{
+  float: right;
+}
+
+.logo img {
+  position: absolute;
+  height: 58px;
+  width: 100px;
+  margin-top: 0;
+  margin-left: 10px;
+
+}
+
+nav a {
+  width:100px;
+  display: block;
+  padding: 20px 15px;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  text-align: center;
+}
+
+nav a:hover {
+  background: rgb(131, 185, 230);
+  transition: 0.5s;
+  text-transform: uppercase;
 }
