--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,41 @@
-html {
-  background: #0025ff;
-  color: #fff;
-}
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Noto Serif JP', serif;
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  }
+  
+  h1 {
+      Font-family: Montserrat;
+      font-weight: 500;
+      color: black;
+  }
+  
+  /* HEADER */
+  header {
+      background: rgb(184, 231, 184);
+      display: flex;
+      flex-direction: row;
+  }
+  
+  i {
+      margin: 10px;
+      padding: 10px 10px;
+  }
+  
+  .hamburger {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 30px;
+      height: 30px;
+      margin: 24px;
+  }
+  
+  .hamburger div {
+      width: 30px;
+      height: 5px;
+      background: black;
+      border-radius: 5px;
+  }
+  
