--- a/code/style.css
+++ b/code/style.css
@@ -53,6 +53,9 @@ article {
   background-position: center;
   height: 200px;
   width: 200px;
+  -webkit-box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
+  -moz-box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
+  box-shadow: 0px -10px 25px -16px rgba(148,140,148,1);
 }
 
 article p {
@@ -86,7 +89,7 @@ article p {
 /* Highlight news*/
 h1 {
   font-family: "didot";
-  font-size: 50px;
+  font-size: 40px;
   color: #4e4e4e;
   text-align: center;
   font-weight: bold;
@@ -145,6 +148,19 @@ h2 {
   padding: 10px;
 }
 
+.footer {
+  text-align: center;
+  background-color:#f7e7bd;
+  width: 100%;
+  height: 125px;
+  line-height: 100px;
+}
+.footer p {
+  font-family:"didot";
+  font-size: 14px;
+  color: rgb(29, 29, 29);
+  text-align: center;
+}
 
 @media screen and (max-width: 992px) and (min-width: 668px) {
   .logo {
