--- a/code/style.css
+++ b/code/style.css
@@ -1,41 +1,62 @@
 body {
-  font-family: 'Montserrat', sans-serif;
-  font-family: 'Noto Serif JP', serif;
-  font-family: 'Quicksand', sans-serif;
-  margin: 0;
-  }
+font-family: 'Montserrat', sans-serif;
+font-family: 'Noto Serif JP', serif;
+font-family: 'Quicksand', sans-serif;
+margin: 0;
+}
+
+h1 {
+    Font-family: Montserrat;
+    font-weight: 400;
+    color: black
+}
+
+/* HEADER */
+header {
+    background: rgb(245, 240, 179);
+    display: flex;
+    flex-direction: row;
+    height: 80px;
+}
+
+i {
+    margin: 10px;
+    padding: 10px 10px;
+}
+
+.hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 30px;
+    margin: 24px;
+}
   
-  h1 {
-      Font-family: Montserrat;
-      font-weight: 500;
-      color: black;
-  }
+.hamburger div {
+    width: 30px;
+    height: 5px;
+    background: black;
+    border-radius: 5px;
+}
+
+nav {
+    display: none;
+}
+
+nav {
+    text-align: center;
+    margin: auto;
+}
+
+nav a {
+    color: black;
+    text-decoration: none;
+    border-right: solid 1px black;
+    padding-right: 15px;
+    padding-left: 16px;   
+}
   
-  /* HEADER */
-  header {
-      background: rgb(184, 231, 184);
-      display: flex;
-      flex-direction: row;
-  }
-  
-  i {
-      margin: 10px;
-      padding: 10px 10px;
-  }
-  
-  .hamburger {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 30px;
-      height: 30px;
-      margin: 24px;
-  }
-  
-  .hamburger div {
-      width: 30px;
-      height: 5px;
-      background: black;
-      border-radius: 5px;
-  }
-  
+nav a:last-child {
+    border-right: none;
+}
