--- a/code/style.css
+++ b/code/style.css
@@ -16,12 +16,13 @@ header {
     background: rgb(245, 240, 179);
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     height: 80px;
 }
 
 i {
     margin: 10px;
-    padding: 10px 10px;
+    padding: 10px 5px 10px 5px;
 }
 
 .hamburger {
@@ -35,9 +36,9 @@ i {
   
 .hamburger div {
     width: 30px;
-    height: 5px;
+    height: 3px;
     background: black;
-    border-radius: 5px;
+    border-radius: 5px;    
 }
 
 nav {
